# LiveCodeBench

./: .gitignore  ERRATA.md  Makefile  README.md  code_exec.sh  pyproject.toml  requirements.txt  run-lcb-evals.py  run_old.sh
lcb_runner/: lm_styles.py
lcb_runner/benchmarks/: __init__.py  code_execution.py  code_generation.py  generation.py  test_output_prediction.py
lcb_runner/evaluation/: __init__.py  compute_code_execution_metrics.py  compute_code_generation_metrics.py  compute_metrics_utils.py  compute_scores.py  compute_test_output_prediction_metrics.py  pass_k_utils.py  testing_util.py  utils_execute.py
lcb_runner/prompts/: __init__.py  code_execution.py  code_generation.py  generation.py  self_repair.py  test_output_prediction.py
lcb_runner/runner/: base_runner.py  claude3_runner.py  claude_runner.py  cohere_runner.py  custom_evaluator.py  deepseek_runner.py  fireworks_runner.py  gemini_runner.py  grok_runner.py  http_api_runner.py  main.py  mistral_runner.py  oai_runner.py  parser.py  runner_utils.py  scenario_router.py  siliconflow_runner.py  together_runner.py  vllm_runner.py  volces_runner.py
lcb_runner/utils/: extraction_utils.py  path_utils.py  scenarios.py
